--- a/src/pages/ProfilePage/ProfilePage.css
+++ b/src/pages/ProfilePage/ProfilePage.css
@@ -21,15 +21,55 @@ form {
   padding: 10px;
 }
 
+.profileInfo {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: auto;
+}
+
+.userIcon {
+  width: 100px;
+  height: 100px;
+}
+
+.userIcon1 {
+  width: 25px;
+  height: 25px;
+}
+
+.userIcon1:hover {
+  color: rgb(22, 164, 230);
+}
+
+.profile_page_info {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 .signupCard {
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 1rem;
-  width: 50vw;
+  width: 35vw;
   height: 15vh;
   border-radius: 10px;
   background-color: #fff;
+  text-align: left;
+  font-size: 10px;
+  padding: 0px 10px;
+  font-weight:lighter;
+}
+
+#image {
+  display: flex;
+  gap: 0rem;
+  width: 35vw;
+  justify-content: center;
+  height: 15vh;
+  border-radius: 10px;
   text-align: left;
   font-size: 10px;
   padding: 0px 10px;
@@ -49,11 +89,6 @@ input {
 
 input:focus {
   outline: none;
-}
-
-.login_pwd {
-  display: flex;
-  gap: 10px;
 }
 
 h1 {
