--- a/src/pages/CRUD/NestedRoutes/Drinks/Drinks.css
+++ b/src/pages/CRUD/NestedRoutes/Drinks/Drinks.css
@@ -1,7 +1,7 @@
 .crudData {
   margin: 1rem;
   width: 15vw;
-  height: 30vh;
+  height: 30rem;
   background-color: antiquewhite;
   border-radius: 10px;
 }
@@ -9,7 +9,6 @@
 .InputData {
   font-family: 'Playfair Display', serif;
   display: flex;
-  flex-direction: column;
   width: 100%;
   height: 100%;
   background-color: #fbf9f6;
@@ -56,4 +55,30 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+.crudBtn {
+  display: flex;
+  height: 50%;
+  justify-content: space-evenly;
+  text-align: center;
+  align-items: flex-end;
+  margin: 5px;
+}
+
+.crudBtnItem {
+  width: fit-content;
+  text-align: center;
+  max-height: 25px;
+  border-radius: 2px;
+  border: none;
+}
+
+#crudEdit {
+  background-color: orange;
+}
+
+#crudDelete {
+  background-color: red;
+
 }
