fix delete button and fetch category and ingredient

--- a/src/pages/CRUD/NestedRoutes/Categories/Categories.css
+++ b/src/pages/CRUD/NestedRoutes/Categories/Categories.css
@@ -8,3 +8,18 @@
   color: black;
   font-weight: 900;
 }
+
+.CategoryData {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.catData {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.crudBtn {
+  display: flex;
+  align-items: flex-end;
+}
