--- a/src/pages/CRUD/NestedRoutes/Drinks/Drinks.css
+++ b/src/pages/CRUD/NestedRoutes/Drinks/Drinks.css
@@ -1,4 +1,7 @@
 .crudData {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   margin: 1rem;
   width: 15vw;
   height: 30rem;
@@ -9,9 +12,14 @@
 .InputData {
   font-family: 'Playfair Display', serif;
   display: flex;
+  flex-direction: row;
   width: 100%;
   height: 100%;
   background-color: #fbf9f6;
+}
+
+.drinkData {
+  display: flex;
 }
 
 #add {
@@ -62,7 +70,6 @@
   height: 50%;
   justify-content: space-evenly;
   text-align: center;
-  align-items: flex-end;
   margin: 5px;
 }
 
